# -SentinelForge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  playwright.config.ts  pytest.ini  requirements-test.txt  run_live_tests.py
ci/: README.md
cli/: pyproject.toml
cli/sf/: __init__.py  main.py
dashboard/: package-lock.json  package.json
docs/: COMMAND_REFERENCE.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  INDEX.md  LEADERSHIP_ACTION_PLAN.md  ROADMAP.md  SECURITY_RISK_ASSESSMENT.md  TEST_RESULTS.md  TOOLS_REFERENCE.md
playbooks/: data_leakage_detected.yaml  jailbreak_detected.yaml  prompt_injection_detected.yaml
scenarios/: adapter_security.yaml  agent_memory.yaml  code_execution_safety.yaml  content_policy_boundary.yaml  data_leakage.yaml  goal_hijacking.yaml  hallucination.yaml  insecure_output.yaml  jailbreak.yaml  language_crossover.yaml  model_dos.yaml  model_theft.yaml  multi_agent_chain.yaml  multi_turn_social_engineering.yaml  multimodal_injection.yaml  pii_handling.yaml  plugin_security.yaml  prompt_injection.yaml  rag_poisoning.yaml  system_prompt_defense.yaml  tool_abuse.yaml  toxicity_bias.yaml  training_data_poisoning.yaml  unsafe_retrieval.yaml
scripts/: export_openapi.py  seed_demo_data.py
sdk/python/: pyproject.toml
sdk/python/sentinelforge_sdk/: __init__.py
templates/: report.html.j2  report_executive.html.j2
tests/: conftest.py  test_integration.py  test_rbac.py  test_sentinelforge.py  test_v25_features.py
tools/: art_adapter.py  cyberseceval_adapter.py  (+14 more)
(+136 files in other folders)
