[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelforge-cli"
version = "1.0.0"
description = "SentinelForge CLI - Enterprise AI Security Testing Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
sf = "sf.main:main"

[tool.setuptools.packages.find]
include = ["sf*"]
