[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelforge-sdk"
version = "1.0.0"
description = "SentinelForge Python SDK for AI security testing"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["sentinelforge_sdk*"]
